--- a/templates/homepage.html
+++ b/templates/homepage.html
@@ -3,18 +3,19 @@
     <head>
         <meta name="viewport" content="with=device-width", intial-scale="1.0">
         <title>REVIVE Rehabilitation Centre </title>
-        <link rel="stylesheet" href="style1.css"><link rel="preconnect" href="https://fonts.googleapis.com">
+        <link rel="stylesheet" href="static/css/style1.css"><link rel="preconnect" href="https://fonts.googleapis.com">
         <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
         <link href="https://fonts.googleapis.com/css2?family=Lora:ital,wght@1,400;1,500;1,600&display=swap" rel="stylesheet">
+        <script src="https://kit.fontawesome.com/3cb81d5d8f.js" crossorigin="anonymous"></script>
     </head>
 
     <body>
         <section class="header">
             <nav>
-                <a href="homepage.html"><img src="images/WhatsApp Image 2022-05-21 at 9.42.46 PM.jpeg"></a>
+                <a href="homepage.html"><img src="static/WhatsApp Image 2022-05-21 at 9.42.46 PM.jpeg"></a>
                 <div class="nav-links">
                     <ul>
-                        <li><a href="">HOME</a></li>
+                        <li><a href="homepage.html">HOME</a></li>
                         <li><a href="">ABOUT</a></li>
                         <li><a href="">CARE</a></li>
                         <li><a href="">BLOG</a></li>
@@ -26,19 +27,39 @@
         <div class="text-box">
             <h1>REVIVE</h1>
             <h2>India's Biggest Rehabilitation Center</h2>
-            <p>vhbtkjgnakrngkfnblgb</p>
-            <a href="" class="btn">Enquire the status of an inmate</a>
+            <p>Bangalore | Delhi | Hyderabad</p>
+            <a href=cells class="btn">Enquire the status of an inmate</a>
 
         </div>
         </section>
 
-        <!------intro------->
+        <!-----------intro----------->
 
 
         <section class="Intro">
-            <h2>INDIA'S PREMIER LUXURY DEADDICTION AND PSYCHOLOGICAL HEALTH CENTER RUN BY INTERNATIONALLY TRAINED PROFESSIONAL DOCTORS AVAILABLE ROUND THE CLOCK</h2>
-            <p>REVIVE is one of India's best luxury rehabilitation centers for de-addiction, psychological well-being, healing because of our internationally-aligned, innovative and state-of-the-art programs individualized for every person approaching us. <br>We're strongly committed to maintaining the best rehabilitation center standards to help every patient with any dependence (for any substance such as alcohol addiction, opioid addiction, all types of drug addiction / process limited addiction such as gambling addiction, gaming addiction, food addiction) and psychological health concerns (such as anxiety symptoms, depression, personality disorders such as borderline personality disorder, eating disorders such as anorexia nervosa / bulimia / obesity, post traumatic stress disorder, obsessive compulsive disorder).</p>
+            <a href="homepage.html"><img src="static/WhatsApp Image 2022-05-22 at 12.28.48 AM.jpeg"></a>
+            <div class="intro-div">
+                <h2>INDIA'S PREMIER LUXURY DEADDICTION AND PSYCHOLOGICAL HEALTH CENTER RUN BY INTERNATIONALLY TRAINED PROFESSIONAL DOCTORS AVAILABLE ROUND THE CLOCK.</h2>
+                <p>REVIVE is one of India's best luxury rehabilitation centers for de-addiction, psychological well-being, healing because of our internationally-aligned, innovative and state-of-the-art programs individualized for every person approaching us. <br>We're strongly committed to maintaining the best rehabilitation center standards to help every patient with any dependence (for any substance such as alcohol addiction, opioid addiction, all types of drug addiction / process limited addiction such as gambling addiction, gaming addiction, food addiction). <br>We also help relieve psychological health concerns (such as anxiety symptoms, depression, personality disorders such as borderline personality disorder, eating disorders such as anorexia nervosa / bulimia / obesity, post traumatic stress disorder, obsessive compulsive disorder).</p>
+            </div>
         </section>
 
     </body>
+
+        
+    <!-----------footer----------->
+    <section class="footer">
+        <h4>About Us</h4>
+        <p>
+            At REVIVE, we recognize that each individual has a unique set of circumstances and a unique set of goals. <br>Hence, we accommodate limited clients at one time in order to design and execute customized treatment plans for each individual.
+        </p>
+        <div class="icons">
+            <i class="fa-brands fa-facebook"></i>
+            <i class="fa-brands fa-twitter"></i>
+            <i class="fa-brands fa-instagram"></i>
+            <i class="fa-brands fa-linkedin"></i>
+        </div>
+        <p>Made with <i class="fa-regular fa-heart"></i> by Suhali Kondapalli</p>
+    </section>
 </html>
+
