--- a/templates/cells.html
+++ b/templates/cells.html
@@ -1,8 +1,10 @@
 <!DOCTYPE html>
 <html>
+<!-----------header--------->
     <head>
         <meta name="viewport" content="with=device-width", intial-scale="1.0">
         <title>REVIVE Rehabilitation Centre-CELLS </title>
+        <link rel="shortcut icon" type="image/png" href="static/lotus (2).png">
         <link rel="stylesheet" href="static/css/style1.css"><link rel="preconnect" href="https://fonts.googleapis.com">
         <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
         <link href="https://fonts.googleapis.com/css2?family=Lora:ital,wght@1,400;1,500;1,600&display=swap" rel="stylesheet">
@@ -13,14 +15,14 @@
     <body>
         <section class="sub-header">
             <nav>
-                <a href="homepage.html"><img src="static/WhatsApp Image 2022-05-21 at 9.42.46 PM.jpeg"></a>
+                <a href=homepage><img src="static/logo.jpeg"></a>
                 <div class="nav-links">
                     <ul>
-                        <li><a href="homepage.html">HOME</a></li>
-                        <li><a href="">ABOUT</a></li>
+                        <li><a href=homepage>HOME</a></li>
+                        <li><a href="">PROGRAMS</a></li>
                         <li><a href="">CARE</a></li>
-                        <li><a href="">BLOG</a></li>
-                        <li><a href="">CONTACT</a></li>
+                        <li><a href=reviews>REVIEWS</a></li>
+                        <li><a href=contact>CONTACT</a></li>
                     </ul>
                 </div>
             </nav>
@@ -42,7 +44,7 @@
                     <li><a href="" class="btn">CELL 6</a></li>
                     <li><a href="" class="btn">CELL 7</a></li>
                     <li><a href="" class="btn">CELL 8</a></li>
-                    <li><a href=video class="btn">CELL 9</a></li>
+                    <li><a href=cell9 class="btn">CELL 9</a></li>
                     <li><a href="" class="btn">CELL 10</a></li>
                 </ul>
             </div>
@@ -54,7 +56,8 @@
 <section class="footer">
     <h4>About Us</h4>
     <p>
-        At REVIVE, we recognize that each individual has a unique set of circumstances and a unique set of goals. <br>Hence, we accommodate limited clients at one time in order to design and execute customized treatment plans for each individual.
+        At REVIVE, we recognize that each individual has a unique set of circumstances and a unique set of goals. <br>Hence,
+        we accommodate limited clients at one time in order to design and execute customized treatment plans for each individual.
     </p>
     <div class="icons">
         <i class="fa-brands fa-facebook"></i>
