--- a/templates/programs.html
+++ b/templates/programs.html
@@ -23,7 +23,7 @@
                     <i class="fa fa-times" onclick="hideMenu()"></i>
                     <ul>
                         <li><a href=homepage>HOME</a></li>
-                        <li><a href=programs>PROGRAMS</a></li>
+                        <li><a href="">PROGRAMS</a></li>
                         <li><a href="">CARE</a></li>
                         <li><a href=reviews>REVIEWS</a></li>
                         <li><a href=contact>CONTACT</a></li>
@@ -32,30 +32,42 @@
                 <i class="fa fa-bars" onclick="showMenu()"></i>
             </nav>
 
-        <div class="text-box">
-            <h1>REVIVE</h1>
-            <h2>India's Biggest Rehabilitation Center</h2>
-            <p>Bangalore | Delhi | Hyderabad</p>
-            <a href=login class="btn">Enquire the status of an inmate</a>
 
-        </div>
+        <!-----------Programs Offered----------->
+        <section class="programs">
+            <h1>Programs Offered By Us:</h1>
+            <p>Upon contacting Sanctum as your potential treatment provider, you can expect an invitation to receive a tour
+                and consultation with the <br>professional experts. Our psychiatrists specialize in working therapeutically with
+                individuals that are suffering from depression,<br> anxiety and much more.</p>
+
+            <div class="rowprog">
+                <div class="programs-col">
+                    <h3>Drug Rehab Program for CEOs</h3>
+                    <p>REVIVE provides a highly regarded Executive Rehab program for Business Professionals/CEOs/Executives.
+                        Many of the individuals treated by our professional team, have spent their lives developing their careers,
+                        working extremely hard and undergoing an inconceivable amount of stress in their professional journey.</p>
+                </div>
+                <div class="programs-col">
+                    <h3>Adolescent Addiction Treatment</h3>
+                    <p>REVIVE provides personalized residential treatment for teens/adolescent population for their specific
+                        requirements such as substance addiction, gaming addiction, depression etc.
+                        Our experts help guide and support parents who are worried along
+                        with establishing a therapeutic alliance easily with adolescents.</p>
+                </div>
+                <div class="programs-col">
+                    <h3>Game Addiction Treatment</h3>
+                    <p>The computer and console gaming industry is growing with its biggest forms being Massive Multiplayer
+                        Online Role Playing Games (MMORPG). These enable the player to fully immerse themselves in a fake world
+                        where they achieve a multitude of tasks. REVIVE helps such individuals to stay away and not be adversely affected. </p>
+                </div>
+            </div>
+
+
+
         </section>
 
-        <!-----------intro----------->
-        <section class="Intro">
-            <div class="intro-img">
-                <a href=""><img src="static/intro.jpeg"></a>
-            </div>
-            <div class="intro-div">
-                <h2>INDIA'S PREMIER LUXURY DE-ADDICTION AND PSYCHOLOGICAL HEALTH CENTER RUN BY INTERNATIONALLY TRAINED PROFESSIONAL DOCTORS AVAILABLE ROUND THE CLOCK.</h2>
-                <p>REVIVE is one of India's best luxury rehabilitation centers for de-addiction, psychological well-being, healing because of our internationally-aligned,
-                    innovative and state-of-the-art programs individualized for every person approaching<br> us. We're strongly committed to maintaining the best rehabilitation
-                    center standards to help every patient with any dependence (for any substance such as alcohol addiction, opioid addiction, all types of drug addiction / process
-                    limited addiction such as gambling addiction, gaming addiction, food addiction).<br> We also help relieve psychological health concerns (such as anxiety symptoms,
-                    depression, personality disorders such as borderline personality disorder, eating disorders such as anorexia nervosa / bulimia / obesity, post traumatic
-                    stress disorder, obsessive compulsive disorder).</p>
-            </div>
         </section>
+
 
 
         <!-----------JavaScript for Toggle Menu------------>
@@ -88,4 +100,3 @@
         <p>Made with <i class="fa-regular fa-heart"></i> by Suhali Kondapalli</p>
     </section>
 </html>
-
