--- a/templates/reviews.html
+++ b/templates/reviews.html
@@ -23,7 +23,7 @@
                     <i class="fa fa-times" onclick="hideMenu()"></i>
                     <ul>
                         <li><a href=homepage>HOME</a></li>
-                        <li><a href=programs>PROGRAMS</a></li>
+                        <li><a href="">PROGRAMS</a></li>
                         <li><a href="">CARE</a></li>
                         <li><a href=reviews>REVIEWS</a></li>
                         <li><a href=contact>CONTACT</a></li>
@@ -32,30 +32,42 @@
                 <i class="fa fa-bars" onclick="showMenu()"></i>
             </nav>
 
-        <div class="text-box">
-            <h1>REVIVE</h1>
-            <h2>India's Biggest Rehabilitation Center</h2>
-            <p>Bangalore | Delhi | Hyderabad</p>
-            <a href=login class="btn">Enquire the status of an inmate</a>
 
-        </div>
+        <!-----------testimonials----------->
+        <section class="reviews">
+            <h1>Patient Feedback:</h1>
+            <h2>A few honest reviews from our beloved patients <3</h2>
+
+            <div class="row">
+                <div class="reviews-col">
+                    <a href=""><img src="static/p1.jpeg"></a>
+                    <div>
+                        <p> Alright, so I have been to a lot of so-called luxury rehabs before for my battle with alcoholism but if I had to speak
+                            from my heart, I can honestly say that these people understood my problem better. For starters, they never lectured
+                            me on my addiction nor were they condescending, really appreciated that part. This is my biggest reason for
+                            liking REVIVE. They understand everyone is different and need a different approach. I have already recommended
+                            REVIVE to my friends back in UK. So, all I want to say is this - Thank you so much. I will keep coming for my follow-ups.</p>
+                        <h3>Mr. Brian Matthews</h3>
+                    </div>
+                </div>
+                <div class="reviews-col">
+                    <a href=""><img src="static/p2.jpeg"></a>
+                    <div>
+                        <p> A green haven in the heart of Hyderabad with no sound of traffic, well-appointed villas with high ceilings,
+                            excellent and roomy bathrooms and unobstructed, clear and large windows. Tall Indian cottonwood trees and silver
+                            oaks manning the borders prone to be a birder's paradise. All in all, it was an experience that I can confirm with
+                            utmost certainty, REVIVE is proving (and would continue to prove) to be life changing for me personally as well as for
+                            my loved ones. And the greatest benefit of it all was getting to regain control over my life with full reinstatement of
+                            confidence and optimism. Winning a few friends along the way has been an added bonus! All the best!</p>
+                        <h3>Mr. Kamal Reddy</h3>
+                    </div>
+                </div>
+            </div>
+
         </section>
 
-        <!-----------intro----------->
-        <section class="Intro">
-            <div class="intro-img">
-                <a href=""><img src="static/intro.jpeg"></a>
-            </div>
-            <div class="intro-div">
-                <h2>INDIA'S PREMIER LUXURY DE-ADDICTION AND PSYCHOLOGICAL HEALTH CENTER RUN BY INTERNATIONALLY TRAINED PROFESSIONAL DOCTORS AVAILABLE ROUND THE CLOCK.</h2>
-                <p>REVIVE is one of India's best luxury rehabilitation centers for de-addiction, psychological well-being, healing because of our internationally-aligned,
-                    innovative and state-of-the-art programs individualized for every person approaching<br> us. We're strongly committed to maintaining the best rehabilitation
-                    center standards to help every patient with any dependence (for any substance such as alcohol addiction, opioid addiction, all types of drug addiction / process
-                    limited addiction such as gambling addiction, gaming addiction, food addiction).<br> We also help relieve psychological health concerns (such as anxiety symptoms,
-                    depression, personality disorders such as borderline personality disorder, eating disorders such as anorexia nervosa / bulimia / obesity, post traumatic
-                    stress disorder, obsessive compulsive disorder).</p>
-            </div>
         </section>
+
 
 
         <!-----------JavaScript for Toggle Menu------------>
@@ -88,4 +100,3 @@
         <p>Made with <i class="fa-regular fa-heart"></i> by Suhali Kondapalli</p>
     </section>
 </html>
-
