--- a/static/css/style1.css
+++ b/static/css/style1.css
@@ -6,15 +6,13 @@
 
 
 /*--------header-------*/
-
 .header{
     min-height: 100vh;
     width: 100%;
-    /*background-image: url("images/Modern Green Smile Life Insurance Logo.png");*/
-    background-color: #f4efe9;
-    background-position: center;
-    background-size: cover;
-    position: relative;
+    background-image: url("background.png");
+    background-position:center;
+    background-size:cover;
+    position:relative;
 }
 nav{
     display: flex;
@@ -24,7 +22,6 @@ nav{
 }
 nav img{
     width: 150px;
-
 }
 .nav-links{
     flex: 1;
@@ -63,18 +60,18 @@ nav img{
     text-align: center;
 }
 .text-box h1{
-    font-size: 62px;
+    font-size: 80px;
 }
 .text-box p{
     margin: 10px 0 40px;
-    font: 14px;
+    font: 20px;
     color: #335b4a;
 }
 .btn{
     display: inline-block;
     color:#335b4a;
     text-decoration: none;
-    font-size: 13px;
+    font-size: 14px;
     border: 1px solid #335b4a;
     padding: 12px 34px;
     position: relative;
@@ -85,66 +82,105 @@ nav img{
     font-weight: bolder;
     border: 2px solid #335b4a;
 }
+nav .fa{
+    display: none;
+}
 
-@media (max-width: 700px) {
+@media screen and (max-width: 700px) {
+    nav img{
+        width: 100px;
+    }
     .text-box h1{
+        font-size: 40px;
+    }
+    .text-box h2{
         font-size: 20px;
+    }
+    .text-box p{
+        font-size: 15px;
     }
     .nav-links ul li{
         display: block;
     }
     .nav-links{
         position: absolute;
-        background-color: #335b4a;
+        background-color: #ebbab0;
         height: 100vh;
         width: 200px;
         top: 0;
-        right: 0;
+        right: -200px;
         text-align: left;
         z-index: 2;
+        transition: 1s;
+    }
+    nav .fa{
+        display: block;
+        color: #335b4a;
+        margin: 10px;
+        font-size: 22px;
+        cursor: pointer;
+    }
+    .nav-links ul{
+        padding: 20px;
     }
 }
 
 
 /*------intro------*/
-
 .Intro{
     background-color: #ebbab0;
     min-height: 100vh;
     text-align: center;
     margin: auto;
-    padding-top: 100px;
-    padding-left: 100px;
-    padding-right: 100px;
 }
-
+.intro-img img{
+    padding-top: 50px;
+}
 intro-div{
     height: 100%;
     background-color: #ebbab0;
-
+    padding: 100px;
 }
 .intro-div h2{
     font-weight: bold;
     height: 100%;
     color:#335b4a;
-    font-size: 25px;
+    font-size: 30px;
     font-weight: 600;
-    padding-top: 50px;
+    padding: 50px;
 }
 .intro-div p{
+    position: relative;
     color: #f4efe9;
     height: 100%;
-    font-size: 20px;
-    font-weight: 300;
-    line-height: 22px;
-    padding: 70px;
+    font-size: 25px;
+    line-height: 25px;
+    padding: 100px;
     padding-top: 50px;
-    margin: auto;
+}
+@media screen and (max-width: 700px){
+    .intro-img img{
+        margin: auto;
+        display: flex;
+        width: 250px;
+        padding: 20px;
+    }
+    .intro-div h2{
+        position: relative;
+        width: 90%;
+        font-size: 15px;  
+        padding: 20px;
+    }
+    .intro-div p{
+        position: relative;
+        width: 80%;
+        font-size: 13px;
+        padding: 20px;
+    }
 }
 
 
 /*------footer------*/
-
 .footer{
     width: 100%;
     text-align: center;
@@ -160,38 +196,52 @@ intro-div{
 .footer p{
     margin: auto;
 }
-
-.icons .fa{
-    margin: 0 20px;
+.icons .fa-brands{
+    margin: 0 10px;
     cursor: pointer;
-    padding: 20px 0;
+    padding: 10px 0;
     color: #ebbab0;
 }
-
 .fa-heart{
     color: #ebbab0;
+}
+@media screen and (max-width: 700px){
+    .footer p{
+        font-size: 15px;
+        margin: 7px;
+        padding: 5px;
+    }
 }
 
 
 /*-----------------cells page------------------*/
-
 .sub-header{
+    background-image: url("background.png");
+    /* background-color: #f4efe9; */
+    background-position:center;
+    background-size:cover;
+    position:relative;
     height: 100vh;
     width: 100%;
-    background-color: #f4efe9;
+    /* background-color: #f4efe9; */
     color: #335b4a;
+    text-align: center;
 }
 .sub-header h1{
     font-size: 35px;
     font-weight: 600;
-    padding-left: 700px;
-    padding-bottom: 20px;
+    /* padding-left: 700px;
+    padding-bottom: 20px; */
 }
 .sub-header h2{
     font-size: 25px;
     font-weight: 600;
-    padding-left: 510px;
-    padding-bottom: 50px;
+    padding: 20px;
+}
+@media screen and (max-width: 700px){
+    .sub-header h1{
+
+    }
 }
 
 
@@ -226,17 +276,18 @@ intro-div{
     cursor: pointer;
 }
 
-/*-----------------cell-9 page------------------*/
 
+/*-----------------cell-9 page------------------*/
 .inmate-btn{
-    display:inline-block;
-    margin: auto;
-    text-align: center;
+    display: inline-block;
     color:#335b4a;
+    left: 50%;
     text-decoration: none;
     font-size: 13px;
     border: 1px solid #335b4a;
     padding: 12px 34px;
+    /* transform: translate(700px, 2px); */
+    text-align: center;
     background: transparent;
     cursor: pointer;
 }
@@ -245,4 +296,166 @@ intro-div{
     border: 2px solid #335b4a;
 }
 
+
+/*-------------live video stream in form-------------*/
+.container img{
+    width: 40%;
+    height: 20%;
+    display: flex;
+    padding-left: 450px;
+    padding-top: 25px;
+    justify-content: space-between;
+    position: center;
+}
+
+/*-------------cell9-------------*/
+.cell9-btn {
+    display: inline-block;
+    color:#335b4a;
+    text-decoration: none;
+    font-size: 13px;
+    border: 1px solid #335b4a;
+    padding: 12px 34px;
+    margin: auto;
+    transform: translate(0px, 10px);
+    text-align: center;
+    position: relative;
+    background: transparent;
+    cursor: pointer;
+}
+.cell9-btn:hover{
+    font-weight: bolder;
+    border: 2px solid #335b4a;
+}
+.img9 {
+    display: flex;
+    width: 40%;
+    margin: auto;
+    padding: 20px;
+    justify-content: space-between;
+    position: relative;
+    align-items: center;
+    text-align: center;
+    align-items: center;
+}
+
+
+/*-------------Contact us page-------------*/
+.contacth1{
+    margin-bottom: 10px;
+    text-align: center;
+    color: #335b4a;
+    font-size: 25px;
+}
+.location{
+    width: 70%;
+    margin: auto;
+    padding: 50px 0;
+}
+.location iframe{
+    width: 100%;
+}
+.contact-us{
+    width: 80%;
+    margin: auto;
+}
+.contact-col{
+    flex-basis: 48%;
+    margin-bottom: 20px;
+}
+.contact-col div{
+    /* display: flex; */
+    align-items: center;
+    margin-bottom: 40px;
+}
+.contact-col .fa-solid{
+    font-size: 20px;
+    margin-bottom: 10px;
+    color:#335b4a;
+}
+.contact-col div p{
+    padding-bottom: 15px;
+    color: #335b4a;
+    text-align: center;
+    margin-bottom: 5px;
+}
+.contact-col div h5{
+    font-size: 20px;
+    padding-bottom: 10px;
+    text-align: center;
+    color: #335b4a;
+    font-weight: 400;
+}
+
+/*-------------Reviews page-------------*/
+.reviews{
+    width: 80%;
+    margin: auto;
+    padding-top: 10px;
+    text-align: center;
+    color: #335b4a;
+}
+.reviews h1{
+    font-size: 30px;
+}
+.reviews h2{
+    font-size: 20px;
+}
+.row{
+    flex: 1;
+}
+.reviews-col{
+    flex-basis: 44%;
+    border-radius: 10px;
+    margin-top: 3.5%;
+    margin-bottom: 5%;
+    text-align: left;
+    background-color:#ebbab0;
+    opacity: 0.9;
+    padding: 25px;
+    cursor: pointer;
+    display: flex;
+}
+.reviews-col img{
+    height: 40px;
+    margin-right: 30px;
+    margin-left: 5px;
+    border-radius: 50%;
+}
+
+/*-------------Programs page-------------*/
+.programs{
+    width: 80%;
+    margin: auto;
+    text-align: center;
+    padding-top: 20px;
+    color: #335b4a;
+}
+.programs h1{
+    font-size: 30px;
+    font-weight: 600;
+}
+.programs p{
+    font-size: 17px;
+    font-weight: 300;
+    line-height: 22px;
+    padding: 10px;
+}
+h3{
+    text-decoration: underline;
+}
+.rowprog{
+    margin-top: 5%;
+    display: flex;
+    justify-content: space-between;
+}
+.programs-col{
+    flex-basis: 31%;
+    background-color: #ebbab0;
+    opacity: 0.9;
+    border-radius: 10px;
+    margin-bottom: 5%;
+    padding: 20px 12px;
+    box-sizing: border-box;
+}
 
