--- a/templates/login.html
+++ b/templates/login.html
@@ -23,7 +23,7 @@
                     <i class="fa fa-times" onclick="hideMenu()"></i>
                     <ul>
                         <li><a href=homepage>HOME</a></li>
-                        <li><a href=programs>PROGRAMS</a></li>
+                        <li><a href="">PROGRAMS</a></li>
                         <li><a href="">CARE</a></li>
                         <li><a href=reviews>REVIEWS</a></li>
                         <li><a href=contact>CONTACT</a></li>
@@ -32,47 +32,27 @@
                 <i class="fa fa-bars" onclick="showMenu()"></i>
             </nav>
 
-        <div class="text-box">
-            <h1>REVIVE</h1>
-            <h2>India's Biggest Rehabilitation Center</h2>
-            <p>Bangalore | Delhi | Hyderabad</p>
-            <a href=login class="btn">Enquire the status of an inmate</a>
-
-        </div>
-        </section>
-
-        <!-----------intro----------->
-        <section class="Intro">
-            <div class="intro-img">
-                <a href=""><img src="static/intro.jpeg"></a>
+            <!--------Button for login---------->
+            <div class="text-box">
+                <a href=requests class="btn">Click me to Login</a>
             </div>
-            <div class="intro-div">
-                <h2>INDIA'S PREMIER LUXURY DE-ADDICTION AND PSYCHOLOGICAL HEALTH CENTER RUN BY INTERNATIONALLY TRAINED PROFESSIONAL DOCTORS AVAILABLE ROUND THE CLOCK.</h2>
-                <p>REVIVE is one of India's best luxury rehabilitation centers for de-addiction, psychological well-being, healing because of our internationally-aligned,
-                    innovative and state-of-the-art programs individualized for every person approaching<br> us. We're strongly committed to maintaining the best rehabilitation
-                    center standards to help every patient with any dependence (for any substance such as alcohol addiction, opioid addiction, all types of drug addiction / process
-                    limited addiction such as gambling addiction, gaming addiction, food addiction).<br> We also help relieve psychological health concerns (such as anxiety symptoms,
-                    depression, personality disorders such as borderline personality disorder, eating disorders such as anorexia nervosa / bulimia / obesity, post traumatic
-                    stress disorder, obsessive compulsive disorder).</p>
-            </div>
+
+            <!-----------JavaScript for Toggle Menu------------>
+            <script>
+                var navLinks = document.getElementById("navLinks");
+                function showMenu(){
+                    navLinks.style.right="0";
+                }
+                function hideMenu(){
+                    navLinks.style.right="-200px";
+                }
+            </script>
         </section>
-
-
-        <!-----------JavaScript for Toggle Menu------------>
-        <script>
-            var navLinks = document.getElementById("navLinks");
-            function showMenu(){
-                navLinks.style.right="0";
-            }
-            function hideMenu(){
-                navLinks.style.right="-200px";
-            }
-        </script>
 
     </body>
 
 
-    <!-----------footer----------->
+<!-----------footer----------->
     <section class="footer">
         <h4>About Us</h4>
         <p>
@@ -88,4 +68,3 @@
         <p>Made with <i class="fa-regular fa-heart"></i> by Suhali Kondapalli</p>
     </section>
 </html>
-
