Added README and webpages

--- a/templates/contact.html
+++ b/templates/contact.html
@@ -5,7 +5,7 @@
     <head>
         <meta content="width=device-width, initial-scale=1" name="viewport" />
         <title>REVIVE Rehabilitation Centre </title>
-        <link rel="shortcut icon" type="image/png" href="static/lotus (1).png">
+        <link rel="shortcut icon" type="image/png" href="static/favicon.png">
         <link rel="stylesheet" href="static/css/style1.css">
         <link rel="preconnect" href="https://fonts.googleapis.com">
         <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
