--- a/templates/programs.html
+++ b/templates/programs.html
@@ -5,7 +5,7 @@
     <head>
         <meta content="width=device-width, initial-scale=1" name="viewport" />
         <title>REVIVE Rehabilitation Centre </title>
-        <link rel="shortcut icon" type="image/png" href="static/lotus (2).png">
+        <link rel="shortcut icon" type="image/png" href="static/favicon.png">
         <link rel="stylesheet" href="static/css/style1.css">
         <link rel="preconnect" href="https://fonts.googleapis.com">
         <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -37,7 +37,7 @@
         <section class="programs">
             <h1>Programs Offered By Us:</h1>
             <p>Upon contacting Sanctum as your potential treatment provider, you can expect an invitation to receive a tour
-                and consultation with the <br>professional experts. Our psychiatrists specialize in working therapeutically with
+                and consultation with the professional experts. Our psychiatrists specialize in working therapeutically with
                 individuals that are suffering from depression,<br> anxiety and much more.</p>
 
             <div class="rowprog">
