--- a/templates/stream.html
+++ b/templates/stream.html
@@ -5,7 +5,7 @@
     <head>
             <meta name="viewport" content="with=device-width", intial-scale="1.0">
             <title>REVIVE Rehabilitation Centre-CELLS </title>
-            <link rel="shortcut icon" type="image/png" href="static/lotus (2).png">
+            <link rel="shortcut icon" type="image/png" href="static/favicon.png">
             <link rel="stylesheet" href="static/css/style1.css"><link rel="preconnect" href="https://fonts.googleapis.com">
             <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
             <link href="https://fonts.googleapis.com/css2?family=Lora:ital,wght@1,400;1,500;1,600&display=swap" rel="stylesheet">
