--- a/templates/homepage.html
+++ b/templates/homepage.html
@@ -24,7 +24,7 @@
                     <ul>
                         <li><a href=homepage>HOME</a></li>
                         <li><a href=programs>PROGRAMS</a></li>
-                        <li><a href="">CARE</a></li>
+                        <li><a href=care>CARE</a></li>
                         <li><a href=reviews>REVIEWS</a></li>
                         <li><a href=contact>CONTACT</a></li>
                     </ul>
