--- a/templates/stream.html
+++ b/templates/stream.html
@@ -20,8 +20,8 @@
                     <div class="nav-links">
                         <ul>
                             <li><a href=homepage>HOME</a></li>
-                            <li><a href="">PROGRAMS</a></li>
-                            <li><a href="">CARE</a></li>
+                            <li><a href=programs>PROGRAMS</a></li>
+                            <li><a href=care>CARE</a></li>
                             <li><a href=reviews>REVIEWS</a></li>
                             <li><a href=contact>CONTACT</a></li>
                         </ul>
